// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PC operations > keyboard operations > 'press O to add item above' > assert > after press {Shift>}o{/Shift} 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item selected"
    >
      <input
        class="editor"
      />
    </div>
    <div
      class="bulletList_child"
    />
  </div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    />
  </div>
</div>
`;

exports[`PC operations > keyboard operations > 'press Shift+Tab in insert mode to dedent item' > assert > after press {Shift>}{Tab}{/Shift} 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            item2
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item selected"
    >
      <input
        class="editor"
      />
    </div>
    <div
      class="bulletList_child"
    />
  </div>
</div>
`;

exports[`PC operations > keyboard operations > 'press Shift+Tab in normal mode to dedent item' > assert > after press {Shift>}{Tab}{/Shift} 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            item2
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item selected"
    >
      <span>
        item3
      </span>
    </div>
    <div
      class="bulletList_child"
    />
  </div>
</div>
`;

exports[`PC operations > keyboard operations > 'press Tab in insert mode to indent item' > assert > after press {Tab} 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            item2
          </span>
        </div>
        <div
          class="bulletList_child"
        >
          <div
            class="bulletList_container"
          >
            <div
              class="bulletList_bullet"
            >
              •
            </div>
            <div
              class="bulletList_item selected"
            >
              <input
                class="editor"
              />
            </div>
            <div
              class="bulletList_child"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PC operations > keyboard operations > 'press Tab in normal mode to indent item' > assert > after press {Tab} 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            item2
          </span>
        </div>
        <div
          class="bulletList_child"
        >
          <div
            class="bulletList_container"
          >
            <div
              class="bulletList_bullet"
            >
              •
            </div>
            <div
              class="bulletList_item selected"
            >
              <span>
                item3
              </span>
            </div>
            <div
              class="bulletList_child"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PC operations > keyboard operations > 'press a to enter insert mode' > assert > after press a 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item selected"
    >
      <input
        class="editor"
      />
    </div>
    <div
      class="bulletList_child"
    />
  </div>
</div>
`;

exports[`PC operations > keyboard operations > 'press i to enter insert mode' > assert > after press i 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item selected"
    >
      <input
        class="editor"
      />
    </div>
    <div
      class="bulletList_child"
    />
  </div>
</div>
`;

exports[`PC operations > keyboard operations > 'press o to add item below' > assert > after press o 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    />
  </div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item selected"
    >
      <input
        class="editor"
      />
    </div>
    <div
      class="bulletList_child"
    />
  </div>
</div>
`;

exports[`PC operations > keyboard operations > press Backspace but nothing happened > 'item has children' > assert > after press Backspace 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    />
  </div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item selected"
    >
      <input
        class="editor"
      />
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            item2_1
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PC operations > keyboard operations > press Backspace to remove a character > after press Backspace 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    />
  </div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item selected"
    >
      <input
        class="editor"
      />
    </div>
    <div
      class="bulletList_child"
    />
  </div>
</div>
`;

exports[`display > insert mode 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            item1_1
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item selected"
        >
          <input
            class="editor"
          />
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item2
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            item2_1
          </span>
        </div>
        <div
          class="bulletList_child"
        >
          <div
            class="bulletList_container"
          >
            <div
              class="bulletList_bullet"
            >
              •
            </div>
            <div
              class="bulletList_item"
            >
              <span>
                item2_1_1
              </span>
            </div>
            <div
              class="bulletList_child"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`display > normal mode 1`] = `
<div>
  log1
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item1
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            item1_1
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item selected"
        >
          <span>
            item1_2
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        item2
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            item2_1
          </span>
        </div>
        <div
          class="bulletList_child"
        >
          <div
            class="bulletList_container"
          >
            <div
              class="bulletList_bullet"
            >
              •
            </div>
            <div
              class="bulletList_item"
            >
              <span>
                item2_1_1
              </span>
            </div>
            <div
              class="bulletList_child"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
